# homeassistant-samsungmdc

./: .generated-go-semantic-release-changelog.md  .releaserc  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: dev.yml  release.yml  validate.yml
custom_components/samsungmdc/: __init__.py  base_entity.py  config_flow.py  const.py  coordinator.py  manifest.json  mdc_api.py  media_player.py  number.py  strings.json
custom_components/samsungmdc/translations/: en.json
