[project]
name = "homeassistant-samsungmdc"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthijs Logemann",email = "matthijs@logemann.dev"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-samsung-mdc (>=1.15.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "*", from="custom_components/samsungmdc"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"